--- a/Pray Together/Info.plist
+++ b/Pray Together/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Let us access your photo library so you can update your profile pic yo</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Let us access your camera so you can update your profile pic yo</string>
 	<key>CFBundleDevelopmentRegion</key>
